bk_ida/gccida/c0/dbxout_source_line
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_source_line/src/dbxout.c:1074:47: error: use of undeclared identifier 'dbxout_source_line_sym_lineno'
sprintf( temp, "*.%s%u", "LM", ( unsigned int)dbxout_source_line_sym_lineno); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_source_line/src/dbxout.c:1083:52: error: use of undeclared identifier 'dbxout_source_line_sym_lineno'
fprintf( asmfile, ".%s%u:\n", "LM", ( unsigned int)dbxout_source_line_sym_lineno); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_source_line/src/dbxout.c:1084:3: error: use of undeclared identifier 'dbxout_source_line_sym_lineno'
++dbxout_source_line_sym_lineno; 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_source_line/src/obj/dbxout.o] Error 1
